--- a/appspec.yml
+++ b/appspec.yml
@@ -12,7 +12,7 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server
+    - location: scripts/stop_server1
       timeout: 300
       runas: root
 
