--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /index.html
-    destination: /var/www/html/
+    destination: /var/www/html/123
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
@@ -12,7 +12,7 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server1
+    - location: scripts/stop_server
       timeout: 300
       runas: root
 
