--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,14 @@ files:
     destination: /var/www/html/
 hooks:
   BeforeInstall:
-    - location: scripts/install_dependencies1
+    - location: scripts/install_dependencies
       timeout: 300
       runas: root
-    - location: scripts/start_server1
+    - location: scripts/start_server
       timeout: 300
       runas: root
   ApplicationStop:
-    - location: scripts/stop_server1
+    - location: scripts/stop_server
       timeout: 30
       runas: root
 
